--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -287,6 +287,11 @@ section.hero{
   align-items: center;
   gap: 30px;
 }
+@media only screen and (max-width: 820px){
+  .left-last .statistics{
+    flex-direction: column;
+  }
+}
 .statistics .statistic-card{
   gap: 13px;
 }
